Attempting to fix the video situation on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,9 +58,15 @@ input {
 HIDING SHIT
 --------------------*/
 @media (max-width: 767px) {
+  .mobile-only {
+    display: block !important; }
+
   .tablet-up {
     display: none !important; } }
 @media (min-width: 768px) {
+  .mobile-only {
+    display: none !important; }
+
   .tablet-up {
     display: block !important; } }
 /*--------------------
